fixing beer details card not centered

--- a/src/components/BeerDetails/BeerDetails.css
+++ b/src/components/BeerDetails/BeerDetails.css
@@ -159,6 +159,8 @@
   .card_container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .not_available {
